@@ -1,3 +1,9 @@
+2006-12-21 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/z80/gen.c (assignResultValue): fixed bug when registers overlap,
+	  with this z80 passes printf float test when enabled
+	* support/regression/tests/bug1057979.c: typo disabled ds390 float test
+
 2006-12-28 Borut Razem <borut.razem AT siol.net>
 
 	* support/cpp2/config.in, support/cpp2/configure.in,
